# CPP-Bazaar

./: LICENSE
CMakeTesting/: README.md
Games/3D Minesweeper/: CMakeLists.txt  main.cpp
Games/3D Minesweeper/src/: precomp.h  winsock_wrapper.h
Games/Minesweeper/: CMakeLists.txt  README.md
Games/Minesweeper/src/: main.cpp  minesweeper.cpp  minesweeper.h  minesweeperDefines.h
Games/Minesweeper/src/ChatModuleCode/: ChatModule.cpp  ChatModule.h  ChatObject.cpp  ChatObject.h  networkcodeTCP.cpp  precomp.h
Multiplayer/Chat Screen/CS Project Code 1/: CMakeLists.txt  README.md
Multiplayer/Chat Screen/CS Project Code 1/src/: chatclient.cpp  chatclient.h  chatdata.h  chatserver.cpp  constants.h  precomp.h  window.cpp  windowserver.cpp
Multiplayer/Chat Screen/CS Project Code 2/: CMakeLists.txt  README.md
Multiplayer/Chat Screen/CS Project Code 2/src/: ChatModule.h  ChatModuleDefines.h  ChatObject.h
Multiplayer/ChatScreen/: CMakeLists.txt
Multiplayer/ChatScreen/src/: button.cpp  button.h  chatclient.cpp  chatclient.h  chatdata.cpp  chatdata.h  chatscreen.cpp  chatscreen.h  chatserver.cpp  chatserver.h  client.cpp  constants.h  main.cpp  mouse.cpp  mouse.h  precomp.h  program.cpp  program.h  programMain.cpp  screenSizeTransfer.h  server.cpp  window.cpp  window.h  windowclient.cpp  windowclient.h  windowdata.cpp  windowmainclient.cpp  windowmainserver.cpp
Multiplayer/Network Code/NC Project Code 1/: CMakeLists.txt  README.md  main.cpp
Multiplayer/Network Code/NC Project Code 2/: CMakeLists.txt  README.md  main.cpp
Multiplayer/Network Code/NC Project Code 2/src/: ncCodeTCP.cpp  ncCodeTCP.h  ncCodeTCP_T.cpp  ncCodeTCP_T.h  windows_include.h
Multiplayer/NetworkCode/: CMakeLists.txt  ChatObject.cpp  ChatObject.h  README.md  dump.text  main.cpp  test.cpp
Multiplayer/Network_Code/: README.md  networkcodeTCP.h
Multiplayer/Official_Chat_Screen/: CMakeLists.txt  README.md
Multiplayer/Official_Chat_Screen/src/: ChatModule.cpp
Multiplayer/ProofOfConcept_Chat_Screen/src/: chatscreen.h  window.h  windowdata.h  windowmainserver.cpp  windowserver.h
Multiplayer/ScratchChatScreen/: CMakeLists.txt  README.md
Multiplayer/ScratchChatScreen/src/: ChatModule.cpp  ChatModule.h  ChatModuleDefines.h  main.cpp
